syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
package ru.tinkoff.academy;

option java_package = "ru.tinkoff.academy.proto.rancher.fielder";
option java_multiple_files = true;

service FielderService {
  rpc getAreasStatByEmail(FielderRequest) returns (FielderResponse);
}

message FielderResponse {
  double max = 1;
  double average = 2;
  double min = 3;
}

message FielderRequest {
  string email = 1;
  google.protobuf.StringValue telephone = 2;
}
